<resources>
    <string name="app_name">QuizApplication</string>
    <string name="edtNewuserName_str">Name </string>
    <string name="edtNewPassword_str">Password</string>
    <string name="edtNewLastName_str">Last Name</string>
    <string name="btn_sign_up_str">Sign up</string>
    <string name="btn_sign_in_str">Sign in</string>
    <string-array name="spnNewSelectUser_etr">
        <item>Select Student or Examiner</item>
        <item>Student</item>
        <item>Examiner</item>
    </string-array>

    <string-array name="spnNewSemester_etr">
        <item>Select Semester</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
    </string-array>

    <string-array name="spnNewBranch_etr">
        <item>Select Branch</item>
        <item>CSE</item>
        <item>IT</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>ETC</item>
        <item>ETRX</item>
    </string-array>

    <string-array name="spnNewSection_etr">
        <item>Select Section</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_subject_str">Subjects</string>
    <string name="action_ranking_str">Ranking</string>
    <string name="action_profile_str">Profile</string>
    <string name="userInstruction_str">
        List of Instructions\n
        1.\n
        2.\n
        3.\n
        4.\n
        5.\n
    </string>
    <string name="startTest_btn_str">Start Test</string>
    <string name="userNote_str">Note:- Do not close app during the test.</string>
    <string name="userSelectedSubject_str">Selected Subject:</string>
    <string name="subjectName_str">Subject Name</string>
    <string name="subjectCredit_str">Credit</string>
    <string name="subjectCode_str">Subject Code</string>
    <string name="eof_str">End of List</string>
    <string name="alertDialog_title">Registration</string>
    <string name="alertDialog_msg">Please Fill in the Details</string>
    <string name="timeLeft_str">Time Left :</string>
    <string name="timeCount_str"> Time Remaining : </string>
    <string name="imageQuestion_desc">Image Question</string>
    <string name="totalScore_str">Total Score : </string>
    <string name="totalQuestion_str">Total Question : 1/100</string>
    <string name="optionA_str">optionA</string>
    <string name="optionB_str">optionB</string>
    <string name="optionC_str">optionC</string>
    <string name="optionD_str">optionD</string>
    <string name="exit_str">Quit</string>
    <string name="finish_msg">Time Up!</string>
    <string name="previous_str">Prev</string>
    <string name="next_str">Next</string>
    <string name="tryAgain_btn_str">Go to Home!</string>
</resources>
