<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_vertical"
    tools:context="com.example.shaad.quizapplication.InstructionActivity">


    <TextView
        android:id="@+id/userSelectedSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userSelectedSubject_str"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/userInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="monospace"
        android:text="@string/userInstruction_str"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/userNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInstruction"
        android:layout_marginTop="24dp"
        android:text="@string/userNote_str"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNote"
        android:layout_marginTop="24dp"
        android:elevation="4dp">

        <Button
            android:id="@+id/startTest_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startTest_btn_str" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
