<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="8dp">

    <TextView
        android:id="@+id/subjectName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/subjectName_str"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/subjectCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/subjectCredit_str"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/subjectCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subjectName"
        android:text="@string/subjectCode_str"
        android:textColor="@android:color/white" />


</RelativeLayout>