<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_vertical"
    tools:context="com.example.shaad.quizapplication.SubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalScore_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalScore_str"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/totalQuestion_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalQuestion_str"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/tryAgainBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tryAgain_btn_str" />

    </LinearLayout>

</RelativeLayout>
